--- a/.github/workflomaster.yml
+++ b/.github/workflomaster.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Publish with dotnet
       run: dotnet publish -c Release
-      working-directory: DeleiteApi
+      working-directory: /DeleiteApi/Deleite.Api
     - name: Deploy
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
