--- a/.github/workflomaster.yml
+++ b/.github/workflomaster.yml
@@ -16,15 +16,31 @@ jobs:
           dotnet-version: 6.0.x
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        
+       - name: dotnet publish
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v2
+        with:
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
+
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
+      with:
+          name: .net-app
+          
     - name: Publish with dotnet
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
     - name: Deploy
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
