--- a/.github/workflows/aspSmart.yml
+++ b/.github/workflows/aspSmart.yml
@@ -16,31 +16,16 @@ jobs:
           dotnet-version: 6.0.x
       - name: Build with dotnet
         run: dotnet build --configuration Release
-        
-       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-      
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-      with:
-          name: .net-app
-          
     - name: Publish with dotnet
+      run: dotnet publish -c Release
+      working-directory: ./DeleiteApi
     - name: Deploy
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
@@ -49,3 +34,4 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         server-dir: '/site1/'
         local-dir: './Deleite.Api/bin/Release/net6.0/publish/'
+
